// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<message> demo: render [basic] correctly 1`] = `
"<button class=\\"arco-btn arco-btn-secondary arco-btn-shape-square arco-btn-size-medium arco-btn-status-normal\\" type=\\"button\\">
  <!--v-if-->Info Message
</button>"
`;

exports[`<message> demo: render [closeable] correctly 1`] = `
"<button class=\\"arco-btn arco-btn-secondary arco-btn-shape-square arco-btn-size-medium arco-btn-status-normal\\" type=\\"button\\">
  <!--v-if-->Closeable Message
</button>"
`;

exports[`<message> demo: render [icon] correctly 1`] = `
"<button class=\\"arco-btn arco-btn-secondary arco-btn-shape-square arco-btn-size-medium arco-btn-status-normal\\" type=\\"button\\">
  <!--v-if-->Info Message
</button>"
`;

exports[`<message> demo: render [position] correctly 1`] = `
"<div class=\\"arco-space arco-space-horizontal arco-space-align-center\\">
  <!---->
  <div class=\\"arco-space-item\\" style=\\"margin-right: 8px;\\"><button class=\\"arco-btn arco-btn-secondary arco-btn-shape-square arco-btn-size-medium arco-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Top Message
    </button></div>
  <!---->
  <div class=\\"arco-space-item\\"><button class=\\"arco-btn arco-btn-secondary arco-btn-shape-square arco-btn-size-medium arco-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Bottom Message
    </button></div>
</div>"
`;

exports[`<message> demo: render [type] correctly 1`] = `
"<div>
  <div class=\\"arco-space arco-space-horizontal arco-space-align-center\\">
    <!---->
    <div class=\\"arco-space-item\\" style=\\"margin-right: 8px;\\"><button class=\\"arco-btn arco-btn-secondary arco-btn-shape-square arco-btn-size-medium arco-btn-status-normal\\" type=\\"button\\">
        <!--v-if-->Info Message
      </button></div>
    <!---->
    <div class=\\"arco-space-item\\" style=\\"margin-right: 8px;\\"><button class=\\"arco-btn arco-btn-secondary arco-btn-shape-square arco-btn-size-medium arco-btn-status-success\\" type=\\"button\\">
        <!--v-if-->Success Message
      </button></div>
    <!---->
    <div class=\\"arco-space-item\\" style=\\"margin-right: 8px;\\"><button class=\\"arco-btn arco-btn-secondary arco-btn-shape-square arco-btn-size-medium arco-btn-status-warning\\" type=\\"button\\">
        <!--v-if-->Warning Message
      </button></div>
    <!---->
    <div class=\\"arco-space-item\\"><button class=\\"arco-btn arco-btn-secondary arco-btn-shape-square arco-btn-size-medium arco-btn-status-danger\\" type=\\"button\\">
        <!--v-if-->Error Message
      </button></div>
  </div>
</div>
<div style=\\"margin-top: 20px;\\">
  <div class=\\"arco-space arco-space-horizontal arco-space-align-center\\">
    <!---->
    <div class=\\"arco-space-item\\" style=\\"margin-right: 8px;\\"><button class=\\"arco-btn arco-btn-secondary arco-btn-shape-square arco-btn-size-medium arco-btn-status-normal\\" type=\\"button\\">
        <!--v-if-->Normal Message
      </button></div>
    <!---->
    <div class=\\"arco-space-item\\" style=\\"margin-right: 8px;\\"><button class=\\"arco-btn arco-btn-secondary arco-btn-shape-square arco-btn-size-medium arco-btn-status-normal\\" type=\\"button\\">
        <!--v-if-->Normal Message With Icon
      </button></div>
    <!---->
    <div class=\\"arco-space-item\\"><button class=\\"arco-btn arco-btn-secondary arco-btn-shape-square arco-btn-size-medium arco-btn-status-primary\\" type=\\"button\\">
        <!--v-if-->Loading Message
      </button></div>
  </div>
</div>"
`;

exports[`<message> demo: render [update] correctly 1`] = `
"<button class=\\"arco-btn arco-btn-secondary arco-btn-shape-square arco-btn-size-medium arco-btn-status-normal\\" type=\\"button\\">
  <!--v-if-->Update Info Message
</button>"
`;
